Fixed Login Screen , Added Visual Changes to map on Mobile

--- a/public/stylesheet/app.css
+++ b/public/stylesheet/app.css
@@ -7,3 +7,10 @@
     width: 100%;
     height: 300px;
 }
+
+
+@media(max-width: 768px){
+    #cluster-map{
+        border-radius: 10px !important;
+    }
+}
